buildscript {
  repositories {
    mavenCentral()
  }
}

plugins {
  id 'java'
  id 'org.owasp.dependencycheck' version '11.1.1' apply true
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
}

dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
  analyzers {
  // Disable scanning of .NET related binaries
    assemblyEnabled = false
    ossIndex {
      enabled = false
    }
    nodeAudit {
      yarnEnabled = false
    }
  }
  analyzedTypes = ['jar']
  scanConfigurations = ['runtimeClasspath']
}
